# SLAM-Planning-DDR-2D

./: .clang-format  .gitignore  .gitmodules  README.md  frames.gv  rviz.rviz
data/: map.csv  map_2.csv  recording.csv  recording_2.csv
install/: local_setup.sh  setup.sh
install/apartment/share/apartment/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/map_generation/lib/map_generation/: map_generation
install/map_generation/share/map_generation/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pid_controller/lib/pid_controller/: pid
install/pid_controller/share/pid_controller/: local_setup.sh  package.sh
install/send_poses/lib/send_poses/: send_poses
install/send_poses/share/send_poses/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/toycar/share/toycar/: package.bash  package.sh  package.zsh
install/toycar/share/toycar/launch/: spawn.launch.py  world.launch.py
install/toycar2D/share/toycar2D/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/toycar3D/share/toycar3D/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
resources/: bt.xml  sensor_metadata.yaml
resources/config_rviz/: dummy_map.rviz
src/apartment/: CMakeLists.txt  package.xml
src/apartment/launch/: apartment.launch.py  world.launch.py
src/apartment/models/apartment_p/: model.config
src/apartment/worlds/: apartment.world
src/apartment_sim/: CMakeLists.txt  package.xml
src/apartment_sim/launch/: apartment_gazebo.py  spawn_bugbot.launch.py  spawn_toycar.launch.py  spawn_toycar.py  toycar_webots.launch.py
src/apartment_sim/models/apartment_p/: model.sdf
src/apartment_sim/models/apartment_simp/: model.config
src/apartment_sim/models/desktop/: model.config  model.sdf
src/apartment_sim/models/living_room_table/: model.sdf
src/apartment_sim/worlds/: apartment.world
src/controller/: package.xml
src/controller/config/: params.yaml
src/controller/src/: aux.cpp  pid_controller.cpp
src/dummy/: CMakeLists.txt  package.xml
src/dummy/src/: dummy_map.cpp
src/evaluation/: print_dataframes.py  print_occupancy_grid.py
src/generate_origin_frame_sim/: package.xml  setup.cfg  setup.py
src/generate_origin_frame_sim/generate_origin_frame_sim/: origin_frame.py
src/gz_classic/: CMakeLists.txt  package.xml
src/gz_classic/launch/: simple_room.launch.py
src/gz_classic/models/sim_models/: test.sdf
src/gz_classic/worlds/: apartment.wbt  simple_room.sdf
src/gz_ignition/: CMakeLists.txt  package.xml
src/gz_ignition/models/world_models/: empty_world.sdf
src/map_generation/: CMakeLists.txt  package.xml
src/map_generation/config/: params.yaml  params_2.yaml
src/map_generation/include/: types.hpp
src/map_generation/include/map_generation/: map_generation.hpp  math_aux.hpp  occupancy_grid.hpp  occupancy_map.hpp
src/map_generation/include/mapping/: bayes_filter.hpp  mapping.hpp  no_noise.hpp  occupancy_grid.hpp  scaner_metadata.hpp
src/map_generation/include/math/: linalg.hpp
src/map_generation/launch/: generate.launch.py  run_simple_sim.launch.py
src/map_generation/src/: frame_initialization.cpp  laser_recorder.cpp  map_generation.cpp  map_recorder.cpp  math_aux.cpp  occupancy_grid.cpp  occupancy_map.cpp  store_laser_scan.cpp  store_map.cpp
src/map_generation/src/mapping/: mapping.cpp  no_noise.cpp  occupancy_grid.cpp  scaner_metadata.cpp
src/map_generation/src/math/: grid.cpp  linalg.cpp
src/map_generation/test/: test_linalg.cpp  test_nonoise.cpp
src/mapping_methods/: CMakeLists.txt  redording_3.csv
src/pid_controller/: CMakeLists.txt
src/pid_controller/launch/: pid.launch.py
src/pid_controller/src/: main.cpp
src/pose_estimation/: CMakeLists.txt  package.xml
src/pose_estimation/launch/: nonoise.launch.py
src/pose_estimation/src/: no_noise.cpp
src/robot_models/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/robot_models/config/: robot_model_testing.rviz
src/robot_models/launch/: simple_ddr_bridge.launch.py  spawn_simple_ddr.launch.py  spawn_toycar.launch.py  start_ign.launch.py
src/robot_models/models/simple_DDR/: model.config  model.sdf
src/robot_models/worlds/: test_world.sdf
src/send_poses/: CMakeLists.txt  package.xml
src/send_poses/src/: main.cpp
src/simulation_models/: CMakeLists.txt  package.xml
src/simulation_models/launch/: apartment.launch.py  spawn_toycar_ignition.launch.py  start_gazebo.launch.py
src/simulation_models/sim_models/apartment_simp/: model.sdf
src/store_laser_scan/: CMakeLists.txt  package.xml
src/toycar/: CMakeLists.txt  package.xml
src/toycar/launch/: nonoise.launch.py  toycar.launch.py
src/toycar/meshes/: caster.stl
src/toycar/urdf/: cameras.xacro  gazebo.xacro  joints_control.xacro  pose.xacro  ray_scanner.xacro  toy.urdf.xacro
src/toycar/worlds/: world.world
src/toycar2D/launch/: spawn.launch.py
src/toycar2D/urdf/: cameras.xacro  differential_drive.xacro
src/toycar3D/: CMakeLists.txt  package.xml
src/toycar3D/launch/: world.launch.py
src/toycar3D/urdf/: ray_scanner.xacro
src/utility_nodes/: CMakeLists.txt  package.xml
src/utility_nodes/src/: store_laser_scan.cpp
(+33 files in other folders)
